# helixvim

./: AGENTS.md  Brewfile  Cargo.toml  Justfile  README.helixvim.md  README.machelix.md  README.md
docs/: CONFIG.md  HELIX_INTEGRATION.md
scripts/: bootstrap.sh  build.sh  test.sh  ui-smoke.sh
src/: main.rs
src/MacVim/: MMHelixBridge.h  MMHelixBridge.m
src/app/: menu.rs  mod.rs  preferences.rs  services.rs
src/bridge/: Cargo.toml  clipboard.rs  cocoa.rs  file_dialog.rs  mod.rs
src/bridge/src/: lib.rs
src/config/: mod.rs
src/editor/: commands.rs  mod.rs  state.rs
src/ui/: mod.rs  renderer.rs  theme.rs  window.rs
